--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ GeSHify Changelog
 	» none
 	Please report any bugs you encounter or your feature wish list to neverpanic@gmail.com. Thank you.
 
+[[ 0.3.9 :: 02.04.2009 ]]
+	» changed docs URL and LG Addon Updater URL to the new locations at the GeSHify web site
+	» added support for quoting tag arguments
+
 [[ 0.3.8 :: 30.12.2008 ]]
 	» added LG Addon Updater support
 
